--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
-		"files.exclude": {
+	"files.exclude": {
 		"node_modules/": true,
-		"typings/": true,
-		"**/*.map": true,
-		"**/*.js": true
+		"typings/": true
 	}
 }
