--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,19 @@
 {
 	"compilerOptions": {
 		"target": "es6",
-		"module": "commonjs",
+		"module": "system",
 		"moduleResolution": "node",
 		"sourceMap": true,
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"removeComments": false,
 		"noImplicitAny": false,
-		"outDir": "./static/js/"
+		"outFile": "./static/sway.js"
 	},
 	"exclude": [
 		"node_modules",
 		"bower_components",
 		"typings",
-		"client/typings",
 		"static/"
 	]
 }
