--- a/package.json
+++ b/package.json
@@ -20,14 +20,13 @@
     "@angular/platform-browser": "2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "2.0.0-rc.4",
     "@angular/router": "3.0.0-beta.1",
-    "@angular/router-deprecated": "2.0.0-rc.2",
     "systemjs": "0.19.27",
-    "core-js": "^2.4.0",
+    "es6-shim": "0.35.0",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "zone.js": "^0.6.12",
-    "angular2-in-memory-web-api": "0.0.14",
-    "bootstrap": "^3.3.6"
+    "bootstrap": "^3.3.6",
+    "ng2-bootstrap": "1.0.17"
   },
   "devDependencies": {
     "concurrently": "^2.0.0",
