--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "es6",
+		"target": "es5",
 		"module": "system",
 		"moduleResolution": "node",
 		"sourceMap": true,
@@ -8,12 +8,8 @@
 		"experimentalDecorators": true,
 		"removeComments": false,
 		"noImplicitAny": false,
+		"allowJs": true,
 		"outFile": "./static/sway.js"
 	},
-	"exclude": [
-		"node_modules",
-		"bower_components",
-		"typings",
-		"static/"
-	]
+	"files": [ "app/main.ts" ]
 }
