--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,10 +2,9 @@
 	// See https://go.microsoft.com/fwlink/?LinkId=733558
 	// for the documentation about the tasks.json format
 	"version": "0.1.0",
-	"command": "tsc",
+	"command": "npm",
 	"isShellCommand": true,
-	"args": ["-w", "-p", "."],
+	"args": ["run", "build:w"],
 	"showOutput": "silent",
-	"isWatching": true,
-	"problemMatcher": "$tsc-watch"
+	"isWatching": true
 }
