--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm build && echo have to start the sway server.",
-    "build-prod": "env ENV=production node run build",
-    "build": "webpack --config webpack.config.js --progress --profile --bail",
+    "start": "npm run build:p && echo have to start the sway server.",
+    "build": "webpack --config webpack.config.js --progress",
     "build:w": "webpack --config webpack.config.js --progress --watch",
+    "build:p": "/usr/bin/env ENV=production webpack --config webpack.config.js --progress",
     "postinstall": "typings install && npm build",
     "typings": "typings"
   },
@@ -32,7 +32,6 @@
     "raw-loader": "^0.5.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
-    "systemjs": "^0.19.27",
     "text-loader": "0.0.1",
     "ts-loader": "^0.8.2",
     "typescript": "^1.8.10",
