--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "^3.0.0-beta.1",
     "angular2-template-loader": "^0.4.0",
     "bootstrap": "^3.3.6",
+    "compression-webpack-plugin": "^0.3.1",
     "concurrently": "^2.0.0",
     "es6-shim": "0.35.0",
     "extract-text-webpack-plugin": "^1.0.1",
