--- a/package.json
+++ b/package.json
@@ -24,14 +24,13 @@
     "bootstrap": "^3.3.6",
     "compression-webpack-plugin": "^0.3.1",
     "concurrently": "^2.0.0",
-    "es6-shim": "0.35.0",
+    "core-js": "^2.4.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.22.0",
-    "lite-server": "^2.2.0",
-    "ng2-bootstrap": "1.0.17",
+    "jquery": "^2.2.4",
+    "jqueryui": "^1.11.1",
     "raw-loader": "^0.5.1",
-    "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.6",
     "text-loader": "0.0.1",
     "ts-loader": "^0.8.2",
