bit of a clean up, again

--- a/package.json
+++ b/package.json
@@ -12,6 +12,10 @@
   },
   "license": "private",
   "devDependencies": {
+    "typescript": "^2.0.0",
+    "core-js": "^2.4.1",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "^0.6.12",
     "@angular/common": "^2.0.0-rc.4",
     "@angular/compiler": "^2.0.0-rc.4",
     "@angular/core": "^2.0.0-rc.4",
@@ -21,18 +25,13 @@
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
     "@angular/router": "^3.0.0-beta.1",
     "angular2-template-loader": "^0.4.0",
-    "bootstrap": "^3.3.6",
-    "compression-webpack-plugin": "^0.3.1",
-    "core-js": "^2.4.1",
-    "jquery": "^2.2.4",
-    "jqueryui": "^1.11.1",
-    "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.6",
-    "text-loader": "0.0.1",
-    "ts-loader": "^0.8.2",
-    "typescript": "^2.0.0",
-    "typings": "^1.0.4",
     "webpack": "^2.1.0-beta.20",
-    "zone.js": "^0.6.12"
+    "raw-loader": "^0.5.1",
+    "awesome-typescript-loader": "^2.1.1",
+    "compression-webpack-plugin": "^0.3.1",
+    "jquery": "^2.2.4",
+    "bootstrap": "^3.3.6",
+    "jqueryui": "^1.11.1",
+    "typings": "^1.0.4"
   }
 }
