--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,9 @@
 		"pretty": true,
 		"allowSyntheticDefaultImports": true
 	},
-	"files": [
-		"typings/index.d.ts",
-		"app/main.ts"
-	]
+	"awesomeTypescriptLoaderOptions": {
+		"skipDeclarationFilesCheck": true,
+		"forkChecker": true,
+		"useWebpackText": true //Allows loaders to be chained to awesome-typescript-loader.
+	}
 }
