--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@angular/common": "^2.0.0-rc.4",
     "@angular/compiler": "^2.0.0-rc.4",
     "@angular/core": "^2.0.0-rc.4",
-    "@angular/forms": "^0.2.0",
+    "@angular/forms": "^0.3.0",
     "@angular/http": "^2.0.0-rc.4",
     "@angular/platform-browser": "^2.0.0-rc.4",
     "@angular/platform-browser-dynamic": "^2.0.0-rc.4",
@@ -28,7 +28,8 @@
     "jquery": "^2.2.4",
     "jqueryui": "^1.11.1",
     "raw-loader": "^0.5.1",
-    "rxjs": "5.0.0-beta.6",
+    "rxjs": "^5.0.0-beta.11",
+    "symbol-observable": "^1.0.2",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.0.0",
     "typings": "^1.0.4",
