--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "npm run build:p && echo have to start the sway server.",
+    "start": "npm run build:w",
     "build": "webpack --progress",
     "build:w": "webpack --watch",
-    "build:p": "ENV=production webpack --progress && rm -f static/vendor.js static/app.js static/vendor.js.map static/app.js.map",
+    "build:p": "NODE_ENV=production webpack --progress && rm -f static/vendor.js static/app.js static/vendor.js.map static/app.js.map",
     "postinstall": "typings install && npm run build",
-    "typings": "typings"
+    "typings": "typings",
+    "tsc": "tsc",
+    "webpack": "webpack"
   },
   "license": "private",
   "devDependencies": {
