--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build:w",
     "build": "webpack --progress",
     "build:w": "webpack --watch",
-    "build:p": "NODE_ENV=production webpack --progress && rm -f static/vendor.js static/app.js static/vendor.js.map static/app.js.map",
+    "build:p": "NODE_ENV=production webpack --progress",
     "postinstall": "typings install && npm run build",
     "typings": "typings",
     "tsc": "tsc",
