--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"module": "es6",
+		"module": "commonjs",
 		"moduleResolution": "node",
 		"emitDecoratorMetadata": true,
 		"experimentalDecorators": true,
 		"removeComments": true,
 		"noImplicitAny": false,
+		"suppressImplicitAnyIndexErrors": true,
 		"noImplicitThis": true,
 		"noEmitHelpers": true,
 		"pretty": true,
