--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   },
   "license": "private",
   "devDependencies": {
-    "@angular/common": "^2.0.0-rc.6",
-    "@angular/compiler": "^2.0.0-rc.6",
-    "@angular/core": "^2.0.0-rc.6",
-    "@angular/forms": "^2.0.0-rc.6",
-    "@angular/http": "^2.0.0-rc.6",
-    "@angular/platform-browser": "^2.0.0-rc.6",
-    "@angular/platform-browser-dynamic": "^2.0.0-rc.6",
-    "@angular/router": "^3.0.0-beta.2",
+    "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
+    "@angular/core": "^2.0.0",
+    "@angular/forms": "^2.0.0",
+    "@angular/http": "^2.0.0",
+    "@angular/platform-browser": "^2.0.0",
+    "@angular/platform-browser-dynamic": "^2.0.0",
+    "@angular/router": "^3.0.0",
     "angular2-template-loader": "^0.4.0",
     "awesome-typescript-loader": "^2.2.1",
     "bootstrap": "^3.3.6",
@@ -30,12 +30,12 @@
     "jquery": "^2.2.4",
     "jqueryui": "^1.11.1",
     "raw-loader": "^0.5.1",
-    "rxjs": "^5.0.0-beta.11",
+    "rxjs": "^5.0.0-beta.12",
     "symbol-observable": "^1.0.2",
     "ts-helpers": "^1.1.1",
     "typescript": "^2.0.2",
     "typings": "^1.3.3",
     "webpack": "^2.1.0-beta.21",
-    "zone.js": "^0.6.17"
+    "zone.js": "^0.6.23"
   }
 }
