--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "private",
   "devDependencies": {
     "@angular/common": "^2.0.0",
+    "@angular/compiler": "^2.0.0",
     "@angular/core": "^2.0.0",
     "@angular/forms": "^2.0.0",
     "@angular/http": "^2.0.0",
