spring clean up for eslint

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,7 @@
 	},
 	"awesomeTypescriptLoaderOptions": {
 		"skipDeclarationFilesCheck": true,
+		"compiler": "xx@angular/compiler-cli",
 		"useWebpackText": true //Allows loaders to be chained to awesome-typescript-loader.
 	}
 }
