--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/bootstrap": "~3.3.32",
     "@types/jquery": "~2.0.32",
     "@types/jqueryui": "~1.11.31",
+    "@types/select2": "^4.0.30",
     "angular2-template-loader": "~0.5.0",
     "awesome-typescript-loader": "~2.2.4",
     "bootstrap": "~3.3.7",
@@ -35,6 +36,7 @@
     "ng2-img-cropper": "^0.6.4",
     "raw-loader": "~0.5.1",
     "rxjs": "~5.0.0-beta.12",
+    "select2": "^4.0.3",
     "symbol-observable": "~1.0.2",
     "ts-helpers": "~1.1.1",
     "typescript": "~2.0.3",
