--- a/package.json
+++ b/package.json
@@ -15,29 +15,29 @@
   },
   "license": "private",
   "dependencies": {
-    "@angular/common": "~2.1.2",
-    "@angular/compiler": "~2.1.2",
-    "@angular/compiler-cli": "^2.1.2",
-    "@angular/core": "~2.1.2",
-    "@angular/forms": "~2.1.2",
-    "@angular/http": "~2.1.2",
-    "@angular/platform-browser": "~2.1.2",
-    "@angular/platform-browser-dynamic": "~2.1.2",
-    "@angular/platform-server": "^2.1.2",
-    "@angular/router": "~3.1.2",
-    "@types/core-js": "^0.9.34",
-    "@types/node": "~6.0.46",
-    "core-js": "~2.4.1",
-    "ng2-img-cropper": "swayops/angular2-img-cropper",
-    "rollup": "^0.36.3",
-    "rollup-plugin-commonjs": "^5.0.5",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-typescript": "^0.8.1",
-    "rollup-plugin-uglify": "^1.0.1",
-    "rollup-watch": "^2.5.0",
-    "rxjs": "~5.0.0-rc.1",
-    "typescript": "~2.0.6",
-    "typings": "~1.5.0",
-    "zone.js": "~0.6.26"
+    "@angular/common": "2.1.2",
+    "@angular/compiler": "2.1.2",
+    "@angular/compiler-cli": "2.1.2",
+    "@angular/core": "2.1.2",
+    "@angular/forms": "2.1.2",
+    "@angular/http": "2.1.2",
+    "@angular/platform-browser": "2.1.2",
+    "@angular/platform-browser-dynamic": "2.1.2",
+    "@angular/platform-server": "2.1.2",
+    "@angular/router": "3.1.2",
+    "@types/core-js": "0.9.34",
+    "@types/node": "6.0.46",
+    "core-js": "2.4.1",
+    "ng2-img-cropper": "github:swayops/angular2-img-cropper",
+    "rollup": "0.36.3",
+    "rollup-plugin-commonjs": "5.0.5",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-typescript": "0.8.1",
+    "rollup-plugin-uglify": "1.0.1",
+    "rollup-watch": "2.5.0",
+    "rxjs": "5.0.0-rc.2",
+    "typescript": "2.1.1",
+    "typings": "1.5.0",
+    "zone.js": "0.6.26"
   }
 }
