--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "npm run build:w",
     "build": "ngc && rollup -c rollup-config.js",
     "build:w": "ngc && rollup -c rollup-config.js --watch",
-    "build:p": "ngc && NODE_ENV=production rollup -c rollup-config.js && gzip -9v static/app.js*",
+    "build:p": "rm -rf aot; ngc && NODE_ENV=production rollup -c rollup-config.js && rm -rf static/app*.gz; gzip -9v static/app.js*",
     "postinstall": "echo running npm run build && npm run build",
     "tsc": "tsc",
     "typings": "typings",
@@ -37,7 +37,6 @@
     "rollup-watch": "2.5.0",
     "rxjs": "5.0.0-beta.12",
     "typescript": "2.0.x",
-    "typings": "1.5.0",
     "zone.js": "0.6.26"
   }
 }
