remove app*gz in non production builds so the server wouldn't serve them

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "npm run build:w",
-    "build": "ngc && rollup -c rollup-config.js",
-    "build:w": "ngc && rollup -c rollup-config.js --watch",
+    "build": "ngc && rollup -c rollup-config.js && rm -rf static/app*.gz",
+    "build:w": "ngc && rm -rf static/app*.gz; rollup -c rollup-config.js --watch",
     "build:p": "rm -rf aot; ngc && NODE_ENV=production rollup -c rollup-config.js && rm -rf static/app*.gz; gzip -9v static/app.js*",
     "postinstall": "echo running npm run build && npm run build",
     "tsc": "tsc",
