--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,6 @@
 		"app/*.ngfactory.*": true,
 		"app/*.metadata.json": true,
 		"app/*.js*": true
-	}
+	},
+	"tslint.configFile": "./tslint.json"
 }
