--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"rollup-plugin-typescript": "^0.8.1",
 		"rollup-plugin-uglify": "^1.0.1",
 		"rollup-watch": "^3.2.2",
-		"rxjs": "^5.0.3",
+		"rxjs": "~5.1.0",
 		"typescript": "^2.1.5",
 		"zone.js": "^0.7.6"
 	}
