--- a/package.json
+++ b/package.json
@@ -15,28 +15,28 @@
 	},
 	"license": "private",
 	"dependencies": {
-		"@angular/common": "^2.4.4",
-		"@angular/compiler": "^2.4.4",
-		"@angular/compiler-cli": "^2.4.4",
-		"@angular/core": "^2.4.4",
-		"@angular/forms": "^2.4.4",
-		"@angular/http": "^2.4.4",
-		"@angular/platform-browser": "^2.4.4",
-		"@angular/platform-browser-dynamic": "^2.4.4",
-		"@angular/platform-server": "^2.4.4",
-		"@angular/router": "^3.4.4",
-		"@types/core-js": "^0.9.35",
-		"@types/node": "^7.0.4",
-		"core-js": "^2.4.1",
-		"ng2-img-cropper": "^0.7.7",
-		"rollup": "^0.41.4",
-		"rollup-plugin-commonjs": "^7.0.0",
-		"rollup-plugin-node-resolve": "^2.0.0",
-		"rollup-plugin-typescript": "^0.8.1",
-		"rollup-plugin-uglify": "^1.0.1",
-		"rollup-watch": "^3.2.2",
+		"@angular/common": "2.4.8",
+		"@angular/compiler": "2.4.8",
+		"@angular/compiler-cli": "2.4.8",
+		"@angular/core": "2.4.8",
+		"@angular/forms": "2.4.8",
+		"@angular/http": "2.4.8",
+		"@angular/platform-browser": "2.4.8",
+		"@angular/platform-browser-dynamic": "2.4.8",
+		"@angular/platform-server": "2.4.8",
+		"@angular/router": "3.4.8",
+		"@types/core-js": "0.9.35",
+		"@types/node": "7.0.5",
+		"core-js": "2.4.1",
+		"ng2-img-cropper": "0.7.7",
+		"rollup": "0.41.4",
+		"rollup-plugin-commonjs": "7.0.0",
+		"rollup-plugin-node-resolve": "2.0.0",
+		"rollup-plugin-typescript": "0.8.1",
+		"rollup-plugin-uglify": "1.0.1",
+		"rollup-watch": "3.2.2",
 		"rxjs": "~5.1.0",
-		"typescript": "^2.1.5",
-		"zone.js": "^0.7.6"
+		"typescript": "2.2.1",
+		"zone.js": "0.7.7"
 	}
 }
