--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ static/vendor.js*
 app/views/basicCreateAndEdit.html
 
 tmp/
-app/*.ngfactory.*
-app/*.js*
+app/*.js
+app/*.js.map
 app/*.metadata.json
 aot/
