--- a/package.json
+++ b/package.json
@@ -1,43 +1,43 @@
 {
-  "name": "sway-dashboard",
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "start": "npm run build:w",
-    "build": "rm -rf aot static/app*.gz; rollup -c rollup-config.js",
-    "build:w": "rm -rf aot static/app*.gz; rollup -c rollup-config.js --watch",
-    "build:p": "rm -rf aot; ngc && NODE_ENV=production rollup -c rollup-config.js && rm -rf static/app*.gz; gzip -9v static/app.js*",
-    "postinstall": "echo running npm run build && npm run build:p",
-    "tsc": "tsc",
-    "typings": "typings",
-    "ngc": "ngc",
-    "rollup": "rollup -c rollup-config.js"
-  },
-  "license": "private",
-  "dependencies": {
-    "@angular/animations": "^4.0.1",
-    "@angular/common": "^4.0.1",
-    "@angular/compiler": "^4.0.1",
-    "@angular/compiler-cli": "^4.0.1",
-    "@angular/core": "^4.0.1",
-    "@angular/forms": "^4.0.1",
-    "@angular/http": "^4.0.1",
-    "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-browser-dynamic": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
-    "@angular/router": "^4.0.1",
-    "@types/core-js": "^0.9.41",
-    "@types/node": "^7.0.12",
-    "core-js": "2.4.1",
-    "ng2-img-cropper": "^0.8.6",
-    "rollup": "^0.41.6",
-    "rollup-plugin-commonjs": "^8.0.2",
-    "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-typescript": "0.8.1",
-    "rollup-plugin-uglify": "1.0.1",
-    "rollup-watch": "3.2.2",
-    "rxjs": "^5.3.0",
-    "typescript": "^2.2.2",
-    "zone.js": "^0.8.5"
-  }
+	"name": "sway-dashboard",
+	"version": "1.0.0",
+	"private": true,
+	"scripts": {
+		"start": "npm run build:w",
+		"build": "rm -rf aot static/app*.gz; rollup -c rollup-config.js",
+		"build:w": "rm -rf aot static/app*.gz; rollup -c rollup-config.js --watch",
+		"build:p": "rm -rf aot; ngc && NODE_ENV=production rollup -c rollup-config.js && rm -rf static/app*.gz; gzip -9v static/app.js*",
+		"postinstall": "echo running npm run build && npm run build:p",
+		"tsc": "tsc",
+		"typings": "typings",
+		"ngc": "ngc",
+		"rollup": "rollup -c rollup-config.js"
+	},
+	"license": "private",
+	"dependencies": {
+		"@angular/animations": "^4.0.1",
+		"@angular/common": "^4.0.1",
+		"@angular/compiler": "^4.0.1",
+		"@angular/compiler-cli": "^4.0.1",
+		"@angular/core": "^4.0.1",
+		"@angular/forms": "^4.0.1",
+		"@angular/http": "^4.0.1",
+		"@angular/platform-browser": "^4.0.1",
+		"@angular/platform-browser-dynamic": "^4.0.1",
+		"@angular/platform-server": "^4.0.1",
+		"@angular/router": "^4.0.1",
+		"@types/core-js": "^0.9.41",
+		"@types/node": "^7.0.12",
+		"core-js": "2.4.1",
+		"ng2-img-cropper": "swayops/angular2-img-cropper",
+		"rollup": "^0.41.6",
+		"rollup-plugin-commonjs": "^8.0.2",
+		"rollup-plugin-node-resolve": "^3.0.0",
+		"rollup-plugin-typescript": "0.8.1",
+		"rollup-plugin-uglify": "1.0.1",
+		"rollup-watch": "3.2.2",
+		"rxjs": "^5.3.0",
+		"typescript": "^2.2.2",
+		"zone.js": "^0.8.5"
+	}
 }
