use yet a different version

--- a/package.json
+++ b/package.json
@@ -15,21 +15,21 @@
 	},
 	"license": "private",
 	"dependencies": {
-		"@angular/animations": "^4.0.1",
-		"@angular/common": "^4.0.1",
-		"@angular/compiler": "^4.0.1",
-		"@angular/compiler-cli": "^4.0.1",
-		"@angular/core": "^4.0.1",
-		"@angular/forms": "^4.0.1",
-		"@angular/http": "^4.0.1",
-		"@angular/platform-browser": "^4.0.1",
-		"@angular/platform-browser-dynamic": "^4.0.1",
-		"@angular/platform-server": "^4.0.1",
-		"@angular/router": "^4.0.1",
+		"@angular/animations": "^4.3.3",
+		"@angular/common": "^4.3.3",
+		"@angular/compiler": "^4.3.3",
+		"@angular/compiler-cli": "^4.3.3",
+		"@angular/core": "^4.3.3",
+		"@angular/forms": "^4.3.3",
+		"@angular/http": "^4.3.3",
+		"@angular/platform-browser": "^4.3.3",
+		"@angular/platform-browser-dynamic": "^4.3.3",
+		"@angular/platform-server": "^4.3.3",
+		"@angular/router": "^4.3.3",
 		"@types/core-js": "^0.9.41",
 		"@types/node": "^7.0.12",
 		"core-js": "2.4.1",
-		"ng2-img-cropper": "swayops/angular2-img-cropper",
+		"ng2-img-cropper": "^0.9.0",
 		"rollup": "^0.41.6",
 		"rollup-plugin-commonjs": "^8.0.2",
 		"rollup-plugin-node-resolve": "^3.0.0",
